force-app/main/default/objects/APT_Price_Matrix_Mapping__c/APT_Price_Matrix_Mapping__c.object-meta.xml
<CustomObject>
    <label>Price Matrix Mapping</label>
    <nameField>
        <label>Price Matrix Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Matrix Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>