force-app/main/default/objects/APT_Price_Matrix_Mapping__c/fields/APT_Dimension1__c.field-meta.xml
<CustomField>
    <fullName>APT_Dimension1__c</fullName>
    <label>Dimension1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>