force-app/main/default/objects/APT_Price_Matrix_Mapping__c/fields/APT_Dimension3_Type__c.field-meta.xml
<CustomField>
    <fullName>APT_Dimension3_Type__c</fullName>
    <label>Dimension3 Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>