force-app/main/default/objects/APT_Price_Matrix_Mapping__c/fields/APT_Product__c.field-meta.xml
<CustomField>
    <fullName>APT_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Price Matrix Mappings</relationshipLabel>
    <relationshipName>Price_Matrix_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>